--- a/web/mavzu2.html
+++ b/web/mavzu2.html
@@ -107,7 +107,7 @@ body{
 <iframe
   width="100%"
   height="220"
-  src="https://www.youtube.com/embed/8E3q4f07j4E"
+  src="https://www.youtube.com/embed/D30GcM7I4OQ"
   title="YouTube video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
