--- a/web/mavzu2.html
+++ b/web/mavzu2.html
@@ -30,9 +30,11 @@ body{
 .video-wrapper {
   position: relative;
   width: 100%;
+  max-width: 100%;
   aspect-ratio: 16 / 9;
   border-radius: 15px;
   overflow: hidden;
+  background: black;
 }
 
 .video-wrapper iframe {
@@ -41,6 +43,7 @@ body{
   left: 0;
   width: 100%;
   height: 100%;
+  border: 0;
 }
 
 .test-box h3, .card h3{
@@ -121,16 +124,17 @@ body{
 
 <div class="card">
 <h3>Video dars</h3>
-<!-- Video konteyneri 16:9 nisbatida -->
+
 <div class="video-wrapper">
 <iframe
-  src="https://www.youtube.com/embed/D30GcM7I4OQ"
+  src="https://www.youtube.com/embed/D30GcM7I4OQ?rel=0&modestbranding=1&controls=1&fs=1"
   title="YouTube video player"
-  frameborder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; fullscreen"
+  referrerpolicy="strict-origin-when-cross-origin"
   allowfullscreen>
 </iframe>
 </div>
+
 </div>
 
 <div class="card">
