--- a/web/mavzu2.html
+++ b/web/mavzu2.html
@@ -241,7 +241,7 @@ Turk tilida biror narsaning mavjudligini bildirish uchun Var, mavjud emasligini 
   <p>Xato javoblar: <span id="wrongScore">0</span></p>
 </div>
 
-<a href="#" class="back-btn">ORQAGA QAYTISH</a>
+<a href="dars.html" class="back-btn">ORQAGA</a>
 
 <script>
 const answers = {
