--- a/web/mavzu3.html
+++ b/web/mavzu3.html
@@ -1,15 +1,8 @@
-İstediğiniz kriterlere uygun olarak, "Sayılar ve Çoğul Ekleri" konusunu kapsayan, 10 soruluk testi ve konu anlatımını içeren HTML kodunu aşağıda bulabilirsiniz.
-
-Bu ders içeriği, kaynaklarda belirtilen Türkçe sayılar (0-1.000.000), çoğul ekleri (-lar/-ler) ve sıra sayıları (-ıncı/-inci) kurallarına dayanmaktadır [1, 2]. Kaynaklara göre Türkçede sayılardan sonra gelen isimlere çoğul eki getirilmez (örneğin "5 kitap" doğrudur, "5 kitaplar" yanlıştır) [2]. Ayrıca "saat", "kalp" ve "hayal" gibi yabancı kökenli bazı kelimelerin istisna olarak "-ler" eki aldığı belirtilmiştir [3].
-
-Aşağıdaki kodu bir dosya olarak (örneğin `index.html`) kaydedip Termux veya herhangi bir tarayıcıda çalıştırabilirsiniz:
-
-```html
 <!DOCTYPE html>
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sayılar ve Çoğul Ekleri</title>
+<title>Türk tili darsi</title>
 
 <style>
 .test-btn,
@@ -79,13 +72,14 @@ body{
 }
 
 #final-score{
-  font-size:24px;
+  font-size:22px;
   text-align:center;
   margin-top:20px;
   padding: 20px;
   background: rgba(255,255,255,0.1);
   border-radius: 15px;
   display: none;
+  border: 2px solid #7c3aed;
 }
 
 .back-btn{
@@ -117,7 +111,7 @@ body{
 <iframe
   width="100%"
   height="220"
-  src="https://www.youtube.com/embed/Dpj6Y93_vC8"
+  src="https://www.youtube.com/embed/vzp9QmBNdZE"
   title="YouTube video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -128,13 +122,13 @@ body{
 <div class="card">
 <h3>Mavzu haqida</h3>
 <p>
-Turk tilida sonlar noldan milliongacha ishlatiladi. Masalan: bir, on, yuz, bin, milyon. Sonlardan keyin keladigan otlarga ko'plik qo'shimchasi qo'shilmaydi. Masalan, besh talaba deyish to'g'ri, lekin besh talabalar deyish xatodir. 
+Turk tilida sonlar noldan boshlab milliongacha ishlatiladi. Ikki xonali sonlarni yozganda so'zlar bir-biridan alohida yoziladi. Masalan, o'ttiz bir yoki sakson to'rt kabi.
 </p>
 <p>
-Ko'plik qo'shimchalari ikki xil: -lar va -ler. Agar so'zning oxirgi unlisi a, i, o, u bo'lsa -lar, agar e, i, ö, ü bo'lsa -ler qo'shimchasi qo'shiladi. Biroq, saat va hayal kabi chet tilidan kirib kelgan ba'zi so'zlar istisno tariqasida -ler qo'shimchasini oladi.
+Ko'plik qo'shimchalari lar va ler hisoblanadi. So'zning oxirgi unlisiga qarab tanlanadi. Agar oxirgi unli a, i, o, u bo'lsa lar qo'shiladi, agar e, i, ö, ü bo'lsa ler qo'shiladi. Muhim qoida: turk tilida sonlardan keyin keladigan otlarga ko'plik qo'shimchasi qo'shilmaydi. Masalan, besh kitob deyish to'g'ri, lekin besh kitoblar deyish xatodir.
 </p>
 <p>
-Tartib sonlarni yasash uchun -ıncı, -inci, -uncu, -üncü qo'shimchalari ishlatiladi. Masalan: birinci, ikinci, uchinchi va hokazo.
+Ba'zi chet tilidan kirgan so'zlar istisno hisoblanadi. Masalan, saat, hayal, kalp kabi so'zlar ler qo'shimchasini oladi. Tartib sonlarni yasash uchun uncu, inci kabi qo'shimchalar qo'llaniladi.
 </p>
 </div>
 
@@ -142,100 +136,100 @@ Tartib sonlarni yasash uchun -ıncı, -inci, -uncu, -üncü qo'shimchalari ishla
   <!-- Test 1 -->
   <div class="test-box" id="q1">
     <h3>Test 1</h3>
-    <p>16 sonining yozilishini toping:</p>
-    <button class="test-btn" onclick="check(1, false, this)">On bir</button>
-    <button class="test-btn" onclick="check(1, true, this)">On altı</button>
-    <button class="test-btn" onclick="check(1, false, this)">On yedi</button>
+    <p>31 soni qanday to'g'ri yoziladi?</p>
+    <button class="test-btn" onclick="check(1, false, this)">Otuzbir</button>
+    <button class="test-btn" onclick="check(1, true, this)">Otuz bir</button>
+    <button class="test-btn" onclick="check(1, false, this)">Otuzyrim</button>
     <p id="r1" class="result"></p>
   </div>
 
   <!-- Test 2 -->
   <div class="test-box" id="q2">
     <h3>Test 2</h3>
-    <p>"Kitap" so'zining ko'plik shakli qaysi?</p>
-    <button class="test-btn" onclick="check(2, true, this)">Kitaplar</button>
-    <button class="test-btn" onclick="check(2, false, this)">Kitapler</button>
-    <button class="test-btn" onclick="check(2, false, this)">Kitaplar-lar</button>
+    <p>"Araba" so'zining ko'plik shaklini toping:</p>
+    <button class="test-btn" onclick="check(2, true, this)">Arabalar</button>
+    <button class="test-btn" onclick="check(2, false, this)">Arabaler</button>
+    <button class="test-btn" onclick="check(2, false, this)">Araba</button>
     <p id="r2" class="result"></p>
   </div>
 
   <!-- Test 3 -->
   <div class="test-box" id="q3">
     <h3>Test 3</h3>
-    <p>"İki" (2) soniga qaysi tartib qo'shimchasi qo'shiladi?</p>
-    <button class="test-btn" onclick="check(3, false, this)">-inci</button>
-    <button class="test-btn" onclick="check(3, true, this)">-nci</button>
-    <button class="test-btn" onclick="check(3, false, this)">-üncü</button>
+    <p>Qaysi birikma grammatik jihatdan to'g'ri?</p>
+    <button class="test-btn" onclick="check(3, false, this)">5 kitaplar</button>
+    <button class="test-btn" onclick="check(3, true, this)">5 kitap</button>
+    <button class="test-btn" onclick="check(3, false, this)">5 kitapa</button>
     <p id="r3" class="result"></p>
   </div>
 
   <!-- Test 4 -->
   <div class="test-box" id="q4">
     <h3>Test 4</h3>
-    <p>Qaysi birikma to'g'ri yozilgan?</p>
-    <button class="test-btn" onclick="check(4, false, this)">3 çocuklar</button>
-    <button class="test-btn" onclick="check(4, true, this)">3 çocuk</button>
-    <button class="test-btn" onclick="check(4, false, this)">Üç çocuklar</button>
+    <p>"Saat" so'ziga qaysi qo'shimcha to'g'ri keladi?</p>
+    <button class="test-btn" onclick="check(4, false, this)">Saatlar</button>
+    <button class="test-btn" onclick="check(4, true, this)">Saatler</button>
+    <button class="test-btn" onclick="check(4, false, this)">Saatuncu</button>
     <p id="r4" class="result"></p>
   </div>
 
   <!-- Test 5 -->
   <div class="test-box" id="q5">
     <h3>Test 5</h3>
-    <p>"Çanta" so'ziga qaysi ko'plik qo'shimchasi mos keladi?</p>
-    <button class="test-btn" onclick="check(5, true, this)">-lar</button>
-    <button class="test-btn" onclick="check(5, false, this)">-ler</button>
-    <button class="test-btn" onclick="check(5, false, this)">-nar</button>
+    <p>"İkinci" so'zi nimani anglatadi?</p>
+    <button class="test-btn" onclick="check(5, false, this)">Ikkita</button>
+    <button class="test-btn" onclick="check(5, true, this)">Ikkinchi</button>
+    <button class="test-btn" onclick="check(5, false, this)">Ikki yuz</button>
     <p id="r5" class="result"></p>
   </div>
 
   <!-- Test 6 -->
   <div class="test-box" id="q6">
     <h3>Test 6</h3>
-    <p>80 sonining turkcha nomini toping:</p>
-    <button class="test-btn" onclick="check(6, false, this)">Yetmiş</button>
-    <button class="test-btn" onclick="check(6, true, this)">Seksen</button>
-    <button class="test-btn" onclick="check(6, false, this)">Doksan</button>
+    <p>"Gözlük" so'zining ko'pligi qaysi?</p>
+    <button class="test-btn" onclick="check(6, true, this)">Gözlükler</button>
+    <button class="test-btn" onclick="check(6, false, this)">Gözlüklar</button>
+    <button class="test-btn" onclick="check(6, false, this)">Gözlük</button>
     <p id="r6" class="result"></p>
   </div>
 
   <!-- Test 7 -->
   <div class="test-box" id="q7">
     <h3>Test 7</h3>
-    <p>Istisno so'zni toping: "Saat..."</p>
-    <button class="test-btn" onclick="check(7, false, this)">Saatlar</button>
-    <button class="test-btn" onclick="check(7, true, this)">Saatler</button>
-    <button class="test-btn" onclick="check(7, false, this)">Saatlar-lar</button>
+    <p>"Kalp" so'zi uchun qaysi biri to'g'ri?</p>
+    <button class="test-btn" onclick="check(7, false, this)">Kalplar</button>
+    <button class="test-btn" onclick="check(7, true, this)">Kalpler</button>
+    <button class="test-btn" onclick="check(7, false, this)">Kalpuncu</button>
     <p id="r7" class="result"></p>
   </div>
 
   <!-- Test 8 -->
   <div class="test-box" id="q8">
     <h3>Test 8</h3>
-    <p>"On" (10) sonining tartib shakli qaysi?</p>
-    <button class="test-btn" onclick="check(8, true, this)">Onuncu</button>
-    <button class="test-btn" onclick="check(8, false, this)">Oninci</button>
-    <button class="test-btn" onclick="check(8, false, this)">Onuncu-lar</button>
+    <p>80 sonining nomi nima?</p>
+    <button class="test-btn" onclick="check(8, true, this)">Seksen</button>
+    <button class="test-btn" onclick="check(8, false, this)">Yetmiş</button>
+    <button class="test-btn" onclick="check(8, false, this)">Doksan</button>
     <p id="r8" class="result"></p>
   </div>
 
   <!-- Test 9 -->
   <div class="test-box" id="q9">
     <h3>Test 9</h3>
-    <p>"Kalem" so'zining ko'pligi qaysi?</p>
-    <button class="test-btn" onclick="check(9, false, this)">Kalemlar</button>
-    <button class="test-btn" onclick="check(9, true, this)">Kalemler</button>
-    <button class="test-btn" onclick="check(9, false, this)">Kalem-lar</button>
+    <p>"3 kuş" jumlasi ko'plikda qanday bo'ladi?</p>
+    <button class="test-btn" onclick="check(9, false, this)">3 kuşlar</button>
+    <button class="test-btn" onclick="check(9, true, this)">Kuşlar</button>
+    <button class="test-btn" onclick="check(9, false, this)">Üç kuşlar</button>
     <p id="r9" class="result"></p>
   </div>
 
   <!-- Test 10 -->
   <div class="test-box" id="q10">
     <h3>Test 10</h3>
-    <p>42 sonining yozilishini toping:</p>
-    <button class="test-btn" onclick="check(10, true, this)">Kırk iki</button>
-    <button class="test-btn" onclick="check(10, false, this)">Elli iki</button>
-    <button class="test-btn" onclick="check(10, false, this)">Otuz iki</button>
+    <p>"Bebek" so'ziga qaysi qo'shimcha tushadi?</p>
+    <button class="test-btn" onclick="check(10, false, this)">-lar</button>
+    <button class="test-btn" onclick="check(10, true, this)">-ler</button>
+    <button class="test-btn" onclick="check(10, false, this)">-nci</button>
     <p id="r10" class="result"></p>
   </div>
 </div>
@@ -246,10 +240,9 @@ Tartib sonlarni yasash uchun -ıncı, -inci, -uncu, -üncü qo'shimchalari ishla
 <a href="dars.html" class="back-btn" style="background:linear-gradient(90deg,#4ade80,#16a34a)">Orqaga</a>
 
 <script>
-let correct = 0;
-let incorrect = 0;
+let correctCount = 0;
+let incorrectCount = 0;
 let answeredCount = 0;
-const totalQuestions = 10;
 const answeredQuestions = new Set();
 
 function check(qNum, isCorrect, btn) {
@@ -263,12 +256,12 @@ function check(qNum, isCorrect, btn) {
   answeredCount++;
 
   if (isCorrect) {
-    correct++;
+    correctCount++;
     resultEl.innerHTML = "To'g'ri!";
     resultEl.className = "result true";
     btn.style.background = "#22c55e";
   } else {
-    incorrect++;
+    incorrectCount++;
     resultEl.innerHTML = "Xato!";
     resultEl.className = "result false";
     btn.style.background = "#ef4444";
@@ -278,8 +271,10 @@ function check(qNum, isCorrect, btn) {
 function showResult() {
   const finalEl = document.getElementById('final-score');
   finalEl.style.display = "block";
-  finalEl.innerHTML = `Natija: ${correct} ta to'g'ri, ${incorrect} ta xato. <br> (${answeredCount} ta savolga javob berildi)`;
-  window.scrollTo(0, document.body.scrollHeight);
+  finalEl.innerHTML = "<b>Umumiy natija:</b><br>" + 
+                       correctCount + " ta to'g'ri<br>" + 
+                       incorrectCount + " ta xato";
+  finalEl.scrollIntoView({ behavior: 'smooth' });
 }
 </script>
 
